[package]
name = "tinystep"
version = "0.1.0"
authors = ["Cynthia <cynthia@bstone.dev>"]
description = "A client library for interacting with small-step certificate authorities."
repository = "https://github.com/Bluestone/tinystep"
keywords = ["smallstep", "certificates"]
categories = ["cryptography"]
license = "MIT"
edition = "2018"

[badges]
is-it-maintained-issue-resolution = { repository = "Bluestone/tinystep" }
is-it-maintained-open-issues = { repository = "Bluestone/tinystep" }
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "^0.4"
color-eyre = "^0.5"
futures = "^0.3"
hex = "^0.4"
isahc = { version = "^0.9", features = ["http2", "json", "static-curl", "text-decoding"], default-features = false }
openssl = { version = "^0.10", features = ["vendored"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tracing = "^0.1"
tracing-futures = "^0.2"

[dev-dependencies]
tokio-test = "^0.3"
tracing-subscriber = "^0.2"